welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	while (estFaceMur()==false){
    var detrompeur=0
    avance()
    if (getCouleurSol()==Color.green){
      detrompeur=1
    }
    recule()
		if (detrompeur==1){
      return true
    }else if (detrompeur==0){
      return false
    }
  }
	if (estFaceMur()==true){
    return false
  }
}